# yuuka

./: .cursorrules  .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  biome.json  docker-compose.dev-hot.yml  docker-compose.yml  example.yaml  node_modules  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  yuuka-voice.service  yuuka-voice.service.example  yuuka.service.example
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
clients/desktop/: Cargo.toml  README.md
clients/desktop/.cargo/: config.toml
clients/desktop/src/: app.rs  attach.rs  config.rs  main.rs  model.rs
clients/desktop/src/audio/: mod.rs  record.rs
clients/desktop/src/net/: auth.rs  mod.rs  rest.rs  ws.rs
clients/desktop/src/os/: mod.rs  windows.rs
clients/desktop/src/ui/: chat.rs  login.rs  mod.rs  overlay.rs  settings.rs
deploy/: README.md  instance.sh
deploy/dev/: config.yaml.example  instance.env.example
deploy/prod/: config.yaml.example  instance.env.example
docker/: entrypoint.dev.sh
docs/: architecture.md  architecture_v2.md  bot_attributes_requirements.md  discordbot_spec.md  index.md  project_overview.md  search_skills.md  svelte-migration-plan.md  svelte-migration-remaining-plan.md
docs/architecture/: architecture_v2.md  mcp_dashboard_proxy.md
docs/design/: architecture_renewal_v3.md  function_modularization.md  synapse_cognitive_architecture.md
docs/design/desktop_client/: architecture.md  backend_api.md  client_design.md  index.md  roadmap.md  (+2 more)
docs/guide/: deployment.md  features.md  setup.md
docs/skills/: search_skills.md
docs/spec/: bot_attributes_requirements.md  discordbot_spec.md
frontend/: index.html  tsconfig.json  vite.config.ts
frontend/public/: 404.html  manifest.json
frontend/src/: App.svelte  main.ts
scratch/: enable_api.ts  test-setup.ts  test-update.ts  test_browser.ts  test_fallback.ts  test_scrape.ts  test_secret.ts  test_write_secret.ts  verify_credentials.ts
src/: bot.ts  config.ts  gemini.ts  index.ts  server.ts
src/db/: auditRepo.ts  botAttributesRepo.ts  botMemberRequestRepo.ts  botNoteRepo.ts  botRepo.ts  botUserModulesRepo.ts  briefingConfigRepo.ts  chatHistoryRepo.ts  clipboardRepo.ts  contactRepo.ts  contextNoteRepo.ts  credentialAccessRepo.ts  credentialRepo.ts  database.ts  desktopTokenRepo.ts  expenseRepo.ts  googleAccountRepo.ts  inviteRepo.ts  mcpRepo.ts  memoryRepo.ts  messageLogRepo.ts  migrations.ts  personaRepo.ts  plannedPaymentRepo.ts  redis.ts  reminderRepo.ts  reportConfigRepo.ts  scheduleRepo.ts  synapseRepo.ts  systemSettingsRepo.ts  taskRepo.ts  timelineRepo.ts  todoRepo.ts  toolOutcomeRepo.ts  userRepo.ts  webhookRepo.ts
src/functions/: botAssistantFunctions.ts  briefingFunctions.ts  browserFunctions.ts  browserModule.ts  chartFunctions.ts  clipboardFunctions.ts  commandFunctions.ts  contactFunctions.ts  conversationFunctions.ts  credentialFunctions.ts  expenseFunctions.ts  fileFunctions.ts  financeFunctions.test.ts  financeFunctions.ts  gitFunctions.ts  index.ts  mcpDynamic.ts  memoryFunctions.ts  moduleCatalog.ts  noteFunctions.ts  playbookFunctions.ts  registry.ts  reminderFunctions.ts  richContentModule.ts  scheduleFunctions.ts  taskFunctions.ts  timelineFunctions.ts  todoFunctions.ts
src/public/: app.js  index.html  manifest.json  styles.css  sw.js  theme-init.js
src/rust_crawler/: Cargo.toml
src/rust_crawler/src/: main.rs
src/rust_synapse/: Cargo.toml
src/rust_synapse/src/: embedder.rs  index.rs  main.rs  storage.rs
src/server/: chatWebSocket.ts  httpHelpers.ts  routeRegistry.ts
src/services/: actionRecorder.ts  autoTagService.ts  backupService.ts  birthdayReminderService.ts  botCapabilities.ts  botModules.ts  botRateLimit.ts  briefingService.ts  browserService.ts  chartService.ts  chatChannelService.ts  clipboardCleanupService.ts  commandService.ts  componentInteractionService.ts  desktopAuthService.ts  fileService.ts  gitService.ts  googleCalendarService.ts  googleDriveService.ts  llmClient.ts  mcpClient.ts  memberRequest.ts  metrics.ts  notifier.ts  passwordPolicy.ts  paymentRecurrenceService.test.ts  paymentRecurrenceService.ts  pendingRegistration.ts  playbookScheduleService.ts  playbookService.ts  receiptParser.ts  reminderEngine.ts  reminderService.ts  reportService.ts  secretService.ts  sessionService.ts  synapseEngine.ts  synapseExtractor.ts  todoRecurrenceService.ts  turnPlanner.test.ts  (+2 more)
src/types/: apiViews.ts  contracts.ts
src/utils/: crypto.ts  datetime.ts  discordMarkdown.ts  embeds.ts  formatters.ts  googleHttpFix.ts  oauthStateStore.ts  secretGuard.ts  ssrfGuard.ts  timezone.ts  toolArgRedaction.ts  webhookSignature.test.ts  webhookSignature.ts  yamlParser.ts
(+156 files in other folders)
