[package]
name = "yuuka-synapse"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yuuka-synapse"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"

[features]
# 将来 ONNX 埋め込みモデル（bge-micro INT8）を差し込むための空フィーチャ。
# 現フェーズでは ort/candle を依存に加えない（軽量・依存ゼロを維持）。
onnx = []
